--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -12,6 +12,7 @@ service:
 redis:
   host: master.hopkinstimesheetcache.krnfqa.use2.cache.amazonaws.com
   port: "6379"
+  password: RedisAuthToken1234
 
 userManagementService:
   url: http://user-management-service.default.svc.cluster.local
