--- a/charts/templates/secrets.yaml
+++ b/charts/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.redis.createSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -5,3 +6,4 @@ metadata:
 type: Opaque
 data:
   RedisAuthToken1234: {{ .Values.redis.password | b64enc | quote }}
+{{- end }}
