--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -34,6 +34,6 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: redis-secret
-                  key: RedisAuthToken1234
+                  key: REDIS_PASSWORD
             - name: USER_MANAGEMENT_SERVICE_URL
               value: {{ .Values.userManagementService.url | quote }}
