--- a/charts/templates/secrets.yaml
+++ b/charts/templates/secrets.yaml
@@ -5,5 +5,5 @@ metadata:
   name: redis-secret
 type: Opaque
 data:
-  RedisAuthToken1234: {{ .Values.redis.password | b64enc | quote }}
+  REDIS_PASSWORD: {{ .Values.redis.password | b64enc | quote }}
 {{- end }}
